# space-news-briefing-agent

./: .env.example  .gitignore  README.md  pyproject.toml  topics.yaml
.github/workflows/: daily-briefing.yml
src/space_news_briefing_agent/: __init__.py  __main__.py  cli.py  config.py  deck.py  email_sender.py  logging_setup.py  main.py  models.py  pipeline.py  summarizer.py  topics.py
src/space_news_briefing_agent/core/: __init__.py  dedupe.py  models.py  normalize.py  storage.py
src/space_news_briefing_agent/news/: __init__.py  base.py  collector.py  newsapi.py  registry.py
src/space_news_briefing_agent/sources/: __init__.py  launches.py  news.py
tests/: test_collector.py  test_core_dedupe.py  test_core_normalize.py  test_core_storage.py  test_deck.py  test_email_sender.py  test_models_schema.py  test_newsapi_provider.py  test_sources_launches.py  test_topics.py
